# notalawyer

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  renovate.json
.cargo/: config.toml
.github/workflows/: ci.yml  release-dry-run.yml
example/: Cargo.toml  about.toml
example/src/: main.rs
notalawyer/: Cargo.toml
notalawyer-build/: Cargo.toml
notalawyer-build/src/: lib.rs
notalawyer-clap/: Cargo.toml
notalawyer-clap/src/: lib.rs
notalawyer/src/: lib.rs
