[package]
name = "notalawyer-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-about = "0.8.4"
camino = "1.2"
krates = "0.20"
toml = "0.9"
codespan-reporting = "0.13"
termcolor = "1.4"
reqwest = { version = "0.13", features = ["blocking"] }
