[package]
name = "notalawyer-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-about = { version = "0.9", default-features = false }
camino = "1.2"
krates = "0.21"
toml-span = "0.7"
codespan-reporting = "0.13"
