[package]
name = "notalawyer-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["fetch-clarify-license"]
# Construct a `ureq::Agent` and hand it to cargo-about so it can fetch remote
# license files for `[clarify.<crate>.git]` entries in `about.toml`. Disable
# (`--no-default-features`) for a fully offline build, e.g. on docs.rs.
fetch-clarify-license = ["dep:ureq", "dep:rustls"]

[dependencies]
cargo-about = { version = "0.9", default-features = false }
camino = "1.2"
krates = "0.21"
toml-span = "0.7"
codespan-reporting = "0.13"
# These mirror the exact versions/features cargo-about 0.9 uses for its own
# HTTP client, so the `ureq::Agent` type unifies with what `Gatherer::gather`
# expects. Both are already transitive dependencies of cargo-about, so enabling
# `fetch-clarify-license` adds no new crates to the dependency graph.
ureq = { version = "3.3", optional = true, default-features = false, features = [
    "platform-verifier",
    "rustls-no-provider",
] }
rustls = { version = "0.23", optional = true, default-features = false, features = [
    "ring",
] }
